# iai_avatar_ros_config

./: CMakeLists.txt~  README.md  package.xml  package.xml~
config/: avatar.yaml  default.yaml  ros_control_sim.yaml  ros_control_sim.yaml~
launch/: avatar.launch  giskardpy_avatar.launch  giskardpy_avatar.launch~  giskardpy_avatar_unreal.launch  world.launch
