<?xml version="1.0"?>
<package >
  <name>avatar_ros_config</name>
  <version>0.0.0</version>
  <description>The urobosim_ros_config package</description>

  <maintainer email="abdelker@uni-bremen.de">abdelker</maintainer>


  <license>BSD 3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>iai_maps</run_depend>
  <run_depend>iai_avatar_description</run_depend>
  <run_depend>iai_kitchen</run_depend>
  <export>

  </export>
</package>
